Egebnisse mittels Korrealtionen abgeschlossen.

--- a/content/1_theorie.tex
+++ b/content/1_theorie.tex
@@ -42,7 +42,7 @@ Dabei spielen die sozio-kulturellen Theorien eine wichtige Rolle im Eltern-Kind-
 
 Weiter ist die Interaktion zwischen den Eltern und dem Kind in der Einbettung des kulturellen Kontext für die Entwicklung wichtig. Es gehören nicht nur andere Menschen dazu, sondern auch die zahlreichen Produkte der menschlichen Erfindungskraft, die als sogenannte Kulturwerkzeuge bezeichnet werden. Dazu gelten Symbolsysteme, Artefakte, Fähigkeiten und Werte \cite[S.~226]{Siegler2008}. Gemäss Wygotski, ein russischer Psychologe und Zeitgenosse von Piaget, sind Kinder soziale Wesen, geformt durch ihren kulturellen Kontext, den sie auch selbst wiederum mitgestalten (vgl. ebd. S.~227). 
 
-Als Grundlage der kognitiven Entwicklung des Menschen gelten gemäss sozio-kulturellen Theoretikern in der Fähigkeit, \textit{Intersubjektivität} herzustellen. Das wechselseitige Verständnis, das Menschen bei der Kommunikation füreinander aufbringen \cite{Gauvain2001, Rogoff1990}. Dabei gilt, dass für eine effektive Verständigung, sich die Beteiligten auf dasselbe Thema konzentrieren und ebenso auf die Reaktion des Andern achten müssen. Dazu ist ein wirksames Lehren und Lernen unverzichtbar. Zwei bis dreimonatige Säuglingen sind lebhafter und interessierter, wenn die Bezugsperson auf ihre Aktionen reagiert \cite{Murray1985}. Sechsmonatige Kinder können neue Verhaltensweisen allein durch die Beobachtung des Verhalten anderer Menschen erlernen \cite{Collie1999}. Im Zentrum der Intersubjektivität steht die \textit{geteilte Aufmerksamkeit (engl. joint attention)}, welches ein Prozess beschreibt, bei dem die sozialen Partner ihre Aufmerksamkeit intendiert auf einen gemeinsamen Gegenstand in der äusseren Umwelt richten. Zum Beispiel schauen die Kinder im Alter zwischen neun und 15 Monaten zunehmend auf dieselben Gegenstände wie ihre Sozialpartner und richten die Aufmerksamkeit von Erwachsenen aktiv auf Objekte, die sie selbst interessieren \cite{Adamson1991, Gauvain2001}. Diese gemeinsame Aufmerksamkeit spielt eine wichtige Rolle bei der frühen Sprachentwicklung \cite[S.~232]{Berk2011}. Eine verwandte Verhaltensweise (\prettyref{sec:Interaktion}) ist das \textit{soziale Referenzieren (engl. social referencing)}, ein Verhalten, um vom Sozialpartner einen Rat oder eine Anleitung für eine unbekannte oder bedrohliche Situation zu bekommen, indem dieser angeschaut wird \cite{Campos1981}. 
+Als Grundlage der kognitiven Entwicklung des Menschen gelten gemäss sozio-kulturellen Theoretikern in der Fähigkeit, \textit{Intersubjektivität} herzustellen. Das wechselseitige Verständnis, das Menschen bei der Kommunikation füreinander aufbringen \cite{Gauvain2001, Rogoff1990}. Dabei gilt, dass für eine effektive Verständigung, sich die Beteiligten auf dasselbe Thema konzentrieren und ebenso auf die Reaktion des Andern achten müssen. Dazu ist ein wirksames Lehren und Lernen unverzichtbar. Zwei bis dreimonatige Säuglingen sind lebhafter und interessierter, wenn die Bezugsperson auf ihre Aktionen reagiert \cite{Murray1985}. Sechsmonatige Kinder können neue Verhaltensweisen allein durch die Beobachtung des Verhalten anderer Menschen erlernen \cite{Collie1999}. Im Zentrum der Intersubjektivität steht die \textit{geteilte Aufmerksamkeit (engl. joint attention)}, welches ein Prozess beschreibt, bei dem die sozialen Partner ihre Aufmerksamkeit intendiert auf einen gemeinsamen Gegenstand in der äusseren Umwelt richten. Zum Beispiel schauen die Kinder im Alter zwischen neun und 15 Monaten zunehmend auf dieselben Gegenstände wie ihre Sozialpartner und richten die Aufmerksamkeit von Erwachsenen aktiv auf Objekte, die sie selbst interessieren \cite{Adamson1991, Gauvain2001}. Diese gemeinsame Aufmerksamkeit spielt eine wichtige Rolle bei der frühen Sprachentwicklung \cite[S.~232]{Berk2011}. Eine verwandte Verhaltensweise ist das \textit{soziale Referenzieren (engl. social referencing)}, ein Verhalten, um vom Sozialpartner einen Rat oder eine Anleitung für eine unbekannte oder bedrohliche Situation zu bekommen, indem dieser angeschaut wird \cite{Campos1981} (siehe auch Abschnitt \textit{\nameref{sec:Interaktion}}). 
 
 Das frühe Umfeld ist für die Entwicklung des Kindes existentiell wichtig. \citeA{Fuligni2004, Linver2004, TamisLeMonda2004} konnten aufzeigen, dass Zuneigung, Engagement sowie Ermutigung der Eltern bei den Säuglingen und Kleinkinder bessere Ergebnisse bei Sprach- und Intelligenztests hervorrufen. Das Ausmass, indem Eltern mit ihren Säuglingen sprechen, trägt erheblich zum frühen Fortschritt des Spracherwerbs bei, was wiederum förderlich für die Intelligenz und gute Schulleistungen in der Grundschule ist \cite{Hart1995}. Warmherziges, einfühlsames elterliches Verhalten ist ein guter Indikator, wie das Kind kognitiv später abschneiden wird \cite[S.~225]{Berk2011}. Der Betreuung steht demzufolge ein grosser Anteil der Entwicklungsarbeit zu. Die Forschung konnte aufzeigen, dass schlecht betreute Kinder in kognitiven und sozialen Fertigkeiten schlechter abschneiden \cite{NICHD2006}.
 
@@ -60,7 +60,7 @@ Emotionen sind durch ihre motivationale Kraft oder Handlungstendenz gekennzeichn
 
 Die \textit{emotionale Selbstregulierung} bezeichnet die Fähigkeit, innere Gefühlszustände zu initiieren, zu hemmen oder zu modulieren, um ein Ziel zu erreichen \cite{Siegler2008}. In den ersten Lebensmonaten helfen Eltern ihren Kindern ihre emotionale Erregung zu regulieren, indem sie kontrollieren, wie stark diese den stimulierenden Ereignissen ausgesetzt sind \cite{Gianino1988}. Ein Säugling ist weniger empfindlich, äussert häufig angenehme Emotionen, erkundet sein Umfeld interessierter und ist leichter zu beruhigen, wenn dessen Eltern angemessen und liebevoll auf seine Hinweisreize reagieren \cite{Crockenberg2004}. Bezugspersonen, die gefühlsbelastenden Erlebnisse des Kindes unzureichend regulieren, riskieren, dass sich Gehirnstrukturen unzureichend entwickeln, welche für Stressregulierung dienen \cite[S.~250]{Berk2011}. Ab dem achten Monat beginnt der Säugling mit der sozialen Bezugnahme, er sucht aktiv nach emotional bewertenden Informationen von einer ihm vertrauten Person \cite{Mumme2007}. Im Allgemein geht die soziale Selbstregulierung mit einer höheren sozialen Kompetenz und einem geringeren Problemverhalten einher \cite[S.~580]{Siegler2008}. 
 
-Die Qualität der Eltern-Kind-Beziehung kann die emotionale Entwicklung der Kinder auf verschiedene Arten beeinflussen. Es scheint, als ob die Beziehungsqualität das Sicherheitsgefühl des Kindes sowie die Empfindung gegenüber der eigenen Person und anderen Menschen beeinflusst (vgl. Unterkapitel \titleref{par:Bindung}). Diese Gefühle wiederum, beeinflussen die Emotionalität der Kinder \cite[S.~561]{Siegler2008}. Im Allgemeinen zeigen Kinder mit einer sicheren Bindung zu ihren Eltern eher positive Emotionen und weniger soziale Ängstlichkeit, verglichen mit Kindern mit einer unsicheren Bindung \cite{Bohlin2000}. Der Ausdruck von Emotionen der Eltern kann die soziale Kompetenz und das psychische Wohlbefinden der Kinder beeinflussen. Die Sicht der Kinder auf sich selbst und Andere hängt im hohen Masse von den Emotionen ab, die zu Hause gezeigt werden \cite{Dunsmore1997}. Zudem dient der elterliche Umgang mit Emotionen den Kindern als Modell, im Sinne von wann und wie Emotionen ausgedrückt werden \cite{Denham1994}. Dies kann das kindliche Verständnis zwischenmenschlicher Beziehung insofern beeinflussen, welche Formen des emotionalen Ausdrucks als angemessen und effektiv wahrgenommen werden \cite{Halberstadt1995}. Die Reaktionen der Eltern auf die Emotionen der Kinder scheinen einen Einfluss auf die emotionale Ausdrucksweise der Kinder zu haben. Werden Traurigkeit und Ängstlichkeit bei Kinder von den Eltern abgetan oder deren Gefühle kritisiert, so sind diese Kinder im Allgemeinen weniger emotional und weisen eine geringere soziale Kompetenz auf als Kinder, deren Eltern sie emotional unterstützen \cite{Eisenberg1998, McDowell2000}. 
+Die Qualität der Eltern-Kind-Beziehung kann die emotionale Entwicklung der Kinder auf verschiedene Arten beeinflussen. Es scheint, als ob die Beziehungsqualität das Sicherheitsgefühl des Kindes sowie die Empfindung gegenüber der eigenen Person und anderen Menschen beeinflusst (vgl. folgendes Unterkapitel \textit{Bindung}). Diese Gefühle wiederum, beeinflussen die Emotionalität der Kinder \cite[S.~561]{Siegler2008}. Im Allgemeinen zeigen Kinder mit einer sicheren Bindung zu ihren Eltern eher positive Emotionen und weniger soziale Ängstlichkeit, verglichen mit Kindern mit einer unsicheren Bindung \cite{Bohlin2000}. Der Ausdruck von Emotionen der Eltern kann die soziale Kompetenz und das psychische Wohlbefinden der Kinder beeinflussen. Die Sicht der Kinder auf sich selbst und Andere hängt im hohen Masse von den Emotionen ab, die zu Hause gezeigt werden \cite{Dunsmore1997}. Zudem dient der elterliche Umgang mit Emotionen den Kindern als Modell, im Sinne von wann und wie Emotionen ausgedrückt werden \cite{Denham1994}. Dies kann das kindliche Verständnis zwischenmenschlicher Beziehung insofern beeinflussen, welche Formen des emotionalen Ausdrucks als angemessen und effektiv wahrgenommen werden \cite{Halberstadt1995}. Die Reaktionen der Eltern auf die Emotionen der Kinder scheinen einen Einfluss auf die emotionale Ausdrucksweise der Kinder zu haben. Werden Traurigkeit und Ängstlichkeit bei Kinder von den Eltern abgetan oder deren Gefühle kritisiert, so sind diese Kinder im Allgemeinen weniger emotional und weisen eine geringere soziale Kompetenz auf als Kinder, deren Eltern sie emotional unterstützen \cite{Eisenberg1998, McDowell2000}. 
 
 \subparagraph{Bindung}\label{par:Bindung}
 Unter Bindung wird eine emotionale Beziehung zu einer bestimmten Person verstanden, die räumlich und zeitlich Bestand hat \cite[S.~585ff]{Siegler2008}. Die frühen Beziehungen der Kinder zu ihren Bezugspersonen beeinflusst die Art der Interaktionen mit anderen Menschen sowie ihr Selbstwertgefühl vom Kleinkindalter bis zum Erwachsenenalter. Bezugspersonen können die biologischen Eltern sein, aber auch Personen, die einen engen Bezug zum Kind haben. Bindung kann als eine besondere Art einer affektiv getragenen sozialen Beziehung zwischen dem Kind und einer bevorzugten Person, die als stärker und klüger angesehen wird, verstanden werden \cite{Biringen1994}. Diese Gefühlsbeziehung zwischen dem Kind und der primären Bezugsperson wird auch als dyadische Beziehung in der psychoanalytischen Literatur beschrieben \cite{Resch1999}. Die Bindungstheorie wurde von John \citeA{Bowlby1969, Bowlby1973, Bowlby1988} und \citeA{Ainsworth1978} entwickelt und konzeptualisiert. Bolwbys Bindungstheorie ist stark von den Lehren Freuds beeinflusst. Insbesondere dadurch, dass die frühsten Beziehungen der Säuglinge zu ihren Müttern ihre späte Entwicklung formen \cite{Siegler2008}. Zudem wurde die Theorie interdisziplinär formuliert und hat ihre Wurzeln neben der psychonalytischen auch in der ethnologischen und kognitiven Wissenschaft \cite{Resch1999}. Die Bindungstheorie beschreibt die angeborene Tendenz des menschlichen Individuums, starke Gefühlsbande zu spezifischen Personen der Umgebung zu bilden. Eine Zerstörung dieser Bande durch Trennung oder Verlust zu einer Bezugsperson kann zu affektiven Störungen führen \cite{Resch1999}. 
@@ -132,14 +132,10 @@ Welchen Effekt hat der Bindungsstil und das aktuelle Stressempfinden der Eltern 
 Für die Formulierung der Hypothesen wurde die Fragestellung aufgeteilt und in zueinander aufbauende Hypothesen umgesetzt. 
 
 \begin{itemize}
-    \item \textbf{Hypothese 1:}
-Eltern mit einem sicheren Bindungsstil weisen eine geringere Mediennutzung im Beisein ihrer Kinder auf als Eltern, die einen unsicheren Bindungsstil aufweisen.
-  \item \textbf{Hypothese 2:}
-Eltern, die ein hohes Ausmass an Stress empfinden, nutzen Medien im Beisein ihrer Kinder häufiger als Eltern, die ein niedriges Ausmass an Stress aufweisen.
-  \item \textbf{Hypothese 3:}
-Eltern mit einem erhöhten Medienverhalten im Beisein ihrer Kinder weisen ein geringeres subjektives Wohlbefinden auf als Eltern, die ein geringeres Medienverhalten im Beisein ihrer Kinder aufweisen.
-  \item \textbf{Hypothese 4:} 
-Eltern mit einem sicheren Bindungsstil weisen ein tieferes Stressempfinden und damit eine geringere Mediennutzung auf als Eltern, die einen unsicheren Bindungsstil aufweisen.
+  \item[H1:] Eltern mit einem sicheren Bindungsstil weisen eine geringere Mediennutzung im Beisein ihrer Kinder auf als Eltern, die einen unsicheren Bindungsstil aufweisen.
+  \item[H2:] Eltern, die ein hohes Ausmass an Stress empfinden, nutzen Medien im Beisein ihrer Kinder häufiger als Eltern, die ein niedriges Ausmass an Stress aufweisen.
+  \item [H3:] Eltern mit einem erhöhten Medienverhalten im Beisein ihrer Kinder weisen ein geringeres subjektives Wohlbefinden auf als Eltern, die ein geringeres Medienverhalten im Beisein ihrer Kinder aufweisen.
+  \item [H4:] Eltern mit einem sicheren Bindungsstil weisen ein tieferes Stressempfinden und damit eine geringere Mediennutzung auf als Eltern, die einen unsicheren Bindungsstil aufweisen.
 \end{itemize}
 
 Aus diesen vier Hypothesen lässt sich zusammenfassend eine \textbf{Grundhypothese} bilden, welche die einzelnen Aussagen in einer Schlussfolgerung vereint: Eltern mit einem sicheren Bindungsstil nutzen Medien seltener, erleben weniger subjektiven Stress dabei und sind zufriedener sind als Eltern, mit einem unsicheren Bindungsstil.
