--- a/content/3_ergebnisse.tex
+++ b/content/3_ergebnisse.tex
@@ -43,7 +43,7 @@ Im Rahmen der Umfrage wurde die Mediennutzung während der Betreuung der Kinder 
 \end{tikzpicture}
 \end{figure}
 
-Weiter wurde die Medientätigkeit in Minuten anhand der letzten Betreuung des Kindes erfasst (siehe \textit{Tabelle \ref{table:Medientätigkeit}}). Dabei wurde unterschieden, ob das Kind wach war $MSN_{Wach}$ oder geschlafen hat $MSN_{Schlafend}$. Alle Medientätigkeiten summiert ergab den Mittelwert der Nutzung. Dieser belief sich währendem das Kind wach war auf $M$=93.1 Minuten ($SD$=103.6, $Min$=0, $Max$=613) und $M$=108.6 Minuten, währendem das Kind geschlafen hat ($SD$=105.3, $Min$=0, $Max$=495). Total waren die Teilnehmer im Schnitt $M$=202.1 Minuten mit Medien beschäftigt, währendem sie ihr Kind betreuten ($SD$=174.9, $Min$=3, $Max$=840).
+Weiter wurde die Medientätigkeit in Minuten anhand der letzten Betreuung des Kindes erfasst (siehe Tabelle \ref{table:Medientätigkeit}). Dabei wurde unterschieden, ob das Kind wach war $MSN_{Wach}$ oder geschlafen hat $MSN_{Schlafend}$. Alle Medientätigkeiten summiert ergab den Mittelwert der Nutzung. Dieser belief sich währendem das Kind wach war auf $M$=93.1 Minuten ($SD$=103.6, $Min$=0, $Max$=613) und $M$=108.6 Minuten, währendem das Kind geschlafen hat ($SD$=105.3, $Min$=0, $Max$=495). Total waren die Teilnehmer im Schnitt $M$=202.1 Minuten mit Medien beschäftigt, währendem sie ihr Kind betreuten ($SD$=174.9, $Min$=3, $Max$=840).
 
 %Table
 \begin{table}[b]
@@ -62,7 +62,7 @@ Weiter wurde die Medientätigkeit in Minuten anhand der letzten Betreuung des Ki
 \label{table:Medientätigkeit}
 \end{table}
 
-Auf die einzelnen Medien verteilt bedeutet, dass die Probanden im Schnitt $M_{w}$=5.2 Minuten telefonierten, während dem das Kind wach war und $M_{s}$=7.2 Minuten, währendem das Kind geschlafen hat (siehe dazu \textit{Abbildung \ref{fig:Medientätigkeit}}). Im Schnitt haben die Teilnehmer $M_{w}$=10 Minuten mit Textnachrichten verbracht (lesen und schreiben) währendem das Kind war wach und $M_{s}$=13.8 Minuten währendem das Kind geschlafen hat. Für das bearbeiten und Lesen von Emails setzten die Teilnehmer $M_{w}$=1.7 Minuten (Kind war wach) und $M_{s}$=7 Minuten ein (Kind hat geschlafen). Beim Lesen und Anschauen von Printemedien ((Bilder-)Bücher, Magazinen, Zeitungen, Comics, etc.) setzten die Eltern $M_{w}$=5.3 und $M_{s}$=12.5 Minuten ein. Im Internet verbrachten sie $M_{w}$=5.9 und $M_{s}$=19.7 Minuten mit Surfen und Informationen suchen. Musik hörten die Eltern während der Betreuung $M_{w}$=18.6 und $M_{s}$=8.3 Minuten. Sie schauten im Schnitt $M_{w}$=5.4 und $M_{s}$=25.1 Minuten Fernseher oder Videos (TV-Sender, Netflix, DVD, etc.). Der Radio lief während $M_{w}$=34.3 und $M_{s}$=12.9 Minuten. Fotos oder Videos wurden während $M_{w}$=5.1 und $M_{s}$=0.9 Minuten gemacht. Video-Games (Smartphone, Computer, Konsole, etc.) wurden während $M_{w}$=.2 und $M_{s}$=1.5 Minuten gespielt. Hörspiele und Hörbücher wurden während $M_{w}$=1.5 und $M_{s}$=2.1 Minuten gehört. Die komplette Auflistung der Mittelwerte (wach \& schlafend), inklusive Angabe des  Mittelwerts ist in \textit{Tabelle \ref{fig:AppMedientätigkeit}} im Anhang \ref{app:Medientätigkeit} zu finden.
+Auf die einzelnen Medien verteilt bedeutet, dass die Probanden im Schnitt $M_{w}$=5.2 Minuten telefonierten, während dem das Kind wach war und $M_{s}$=7.2 Minuten, währendem das Kind geschlafen hat (siehe dazu \textit{Abbildung \ref{fig:Medientätigkeit}}). Im Schnitt haben die Teilnehmer $M_{w}$=10 Minuten mit Textnachrichten verbracht (lesen und schreiben) währendem das Kind war wach und $M_{s}$=13.8 Minuten währendem das Kind geschlafen hat. Für das bearbeiten und Lesen von Emails setzten die Teilnehmer $M_{w}$=1.7 Minuten (Kind war wach) und $M_{s}$=7 Minuten ein (Kind hat geschlafen). Beim Lesen und Anschauen von Printemedien ((Bilder-)Bücher, Magazinen, Zeitungen, Comics, etc.) setzten die Eltern $M_{w}$=5.3 und $M_{s}$=12.5 Minuten ein. Im Internet verbrachten sie $M_{w}$=5.9 und $M_{s}$=19.7 Minuten mit Surfen und Informationen suchen. Musik hörten die Eltern während der Betreuung $M_{w}$=18.6 und $M_{s}$=8.3 Minuten. Sie schauten im Schnitt $M_{w}$=5.4 und $M_{s}$=25.1 Minuten Fernseher oder Videos (TV-Sender, Netflix, DVD, etc.). Der Radio lief während $M_{w}$=34.3 und $M_{s}$=12.9 Minuten. Fotos oder Videos wurden während $M_{w}$=5.1 und $M_{s}$=0.9 Minuten gemacht. Video-Games (Smartphone, Computer, Konsole, etc.) wurden während $M_{w}$=.2 und $M_{s}$=1.5 Minuten gespielt. Hörspiele und Hörbücher wurden während $M_{w}$=1.5 und $M_{s}$=2.1 Minuten gehört. Die komplette Auflistung der Mittelwerte (wach \& schlafend), inklusive Angabe des  Mittelwerts ist in Tabelle \ref{fig:AppMedientätigkeit} im Anhang zu finden.
 
 \begin{figure}%[htp]
 \caption{Mittelwerte der Medientätigkeiten während der Betreuung}\label{fig:Medientätigkeit}
@@ -97,12 +97,12 @@ Auf die einzelnen Medien verteilt bedeutet, dass die Probanden im Schnitt $M_{w}
 \end{tikzpicture}
 \end{figure}
 
-Neben der Mediennutzung und der Medientätigkeit wurde die Anzahl Geräte im Haushalt erfragt (detaillierte Auflistung siehe \textit{Tabelle \ref{fig:AppGeräteHaushalt}} im Anhang \ref{app:Mediengeräte}). Dabei gaben 83.9\% der Teilnehmer an, 2 Smartphones im Haushalt zu besitzen. 70.2\% gaben an, ein TV-Gerät zu besitzen. 45\% der Befragten besitzen 2 Computer (Desktop oder Laptop), 45.9\% ein Tablet und 48.2\% einen Radio (Stereoanlage, CD-Player) im Haushalt. 51.4\% gaben an, keine Tageszeitung oder ein Magazins abboniert zu haben. 45.9\% gaben an, einen Fotoapparat oder Videokamera zu besitzen. 61\% besitzen keine Spielekonsole und 67\% keinen MP3 Player.
+Neben der Mediennutzung und der Medientätigkeit wurde die Anzahl Geräte im Haushalt erfragt (detaillierte Auflistung siehe Tabelle \ref{fig:AppGeräteHaushalt} im Anhang). Dabei gaben 83.9\% der Teilnehmer an, 2 Smartphones im Haushalt zu besitzen. 70.2\% gaben an, ein TV-Gerät zu besitzen. 45\% der Befragten besitzen 2 Computer (Desktop oder Laptop), 45.9\% ein Tablet und 48.2\% einen Radio (Stereoanlage, CD-Player) im Haushalt. 51.4\% gaben an, keine Tageszeitung oder ein Magazins abboniert zu haben. 45.9\% gaben an, einen Fotoapparat oder Videokamera zu besitzen. 61\% besitzen keine Spielekonsole und 67\% keinen MP3 Player.
 
-Zudem wurden die Medien erhoben, auf welche die Eltern während der Betreuung am wenigsten verzichten konnten (siehe \textit{Tabelle \ref{fig:AppMedienverzicht}} im Anhang \ref{app:Medienverzicht}). 85.3\% gaben an, nicht auf das Smartphone verzichten zu können, gefolgt vom Radio (Stereonalage, CD-Player) von 33.9\% und 25.2\% Foto- und Videokamera. Weiter gaben die Teilnehmer an, dass 11.9\% von ihnen nicht auf den Fernseher, 9.6\% nicht auf das Abo einer Tageszeitung oder Zeitschrift, 8.3\% nicht auf den Computer (Laptop oder Desktop), 2.8\% nicht auf den MP3-Player, 2.3\% nicht auf das Tablet und .9\% nicht auf die Spielkonsole verzichten können.
+Zudem wurden die Medien erhoben, auf welche die Eltern während der Betreuung am wenigsten verzichten konnten (siehe Tabelle \ref{fig:AppMedienverzicht} im Anhang). 85.3\% gaben an, nicht auf das Smartphone verzichten zu können, gefolgt vom Radio (Stereonalage, CD-Player) von 33.9\% und 25.2\% Foto- und Videokamera. Weiter gaben die Teilnehmer an, dass 11.9\% von ihnen nicht auf den Fernseher, 9.6\% nicht auf das Abo einer Tageszeitung oder Zeitschrift, 8.3\% nicht auf den Computer (Laptop oder Desktop), 2.8\% nicht auf den MP3-Player, 2.3\% nicht auf das Tablet und .9\% nicht auf die Spielkonsole verzichten können.
 
 \subsubsection{Bindung anhand AAS}
-Die Skalenauswertung des Adult Attachment Scale (\acrshort{aas}) lieferte folgende Werte (siehe \textit{Tabelle \ref{table:AASDeskriptivTrans}}). Dabei wurden die transformierten Skalen mit einem Wertebereich von 0 bis 100 verwendet (siehe dazu die Formel \ref{eq:AASIndexTrans} in Kapitel \nameref{sec:AAS}). Der Mittelwert $M$ der Skala $AAS_{\textnormal{Nähe}}$ beträgt 78.46 ($SD$=15.98). Der Mittelwert $M$ der Skala $AAS_{Vertrauen}$ beträgt 80.18 ($SD$=16.98) und der Mittelwert  $M$ der Skala $AAS_{Angst}$ beträgt 20.28 ($SD$=17.43). Die entsprechenden Werte der original Skalen sind in \textit{Tabelle \ref{table:AppAASDeskriptiv}} in Anhang \ref{app:TablesAas} zu finden.
+Die Skalenauswertung des Adult Attachment Scale (\acrshort{aas}) lieferte folgende Werte (siehe Tabelle \ref{table:AASDeskriptivTrans}). Dabei wurden die transformierten Skalen mit einem Wertebereich von 0 bis 100 verwendet (siehe dazu die Formel \ref{eq:AASIndexTrans} in Kapitel \nameref{sec:AAS}). Der Mittelwert $M$ der Skala $AAS_{\textnormal{Nähe}}$ beträgt 78.46 ($SD$=15.98). Der Mittelwert $M$ der Skala $AAS_{Vertrauen}$ beträgt 80.18 ($SD$=16.98) und der Mittelwert  $M$ der Skala $AAS_{Angst}$ beträgt 20.28 ($SD$=17.43). Die entsprechenden Werte der original Skalen sind in Tabelle \ref{table:AppAASDeskriptiv} im Anhang zu finden.
 
 %Table
 \begin{table}%[ht]
@@ -124,7 +124,7 @@ Die Skalenauswertung des Adult Attachment Scale (\acrshort{aas}) lieferte folgen
 Für die Beantwortung der Fragestellung wurde anhand der Skalen eine Aufteilung der Stichprobe in sicher und unsicher gebundene Personen vorgenommen. Wie bereits in Kapitel \titleref{sec:AAS} beschrieben, kann eine Aufteilung in das Cluster \enquote{sicher} vorgenommen werden \cite{Schuetzmann2004}. Gemäss dieser Aufteilung lassen sich 69.7\% ($N$=144) der Probanden in sicher und 30.3\% ($N$=60) in unsicher gebundene Personen zuordnen. 
 
 \subsubsection{Stress anhand PSQ}
-Die Skalenauswertung des Perceived Stress Questionnaire (\acrshort{psq}) liefert folgende Werte (siehe \textit{Tabelle \ref{table:PSQDeskriptiv}}). Der Mittelwert $M$ der Skala $PSQ_{Sorgen}$ beträgt 24.28 ($SD$=17.69). Der Mittelwert $M$ der Skala $PSQ_{Anspannung}$ beträgt 42.14 ($SD$=21.96). Der Mittelwert $M$ der Skala $PSQ_{Freude}$ beträgt 65.26 ($SD$=19.08). Der Mittelwert $M$ der Skala $PSQ_{Anforderung}$ beträgt 46.97 ($SD$=19.54) und der Gesamtmittelwert $M$ der Skala $PSQ_{Gesamtscore}$ beträgt 37.03 ($SD$=17.11).
+Die Skalenauswertung des Perceived Stress Questionnaire (\acrshort{psq}) liefert folgende Werte (siehe Tabelle \ref{table:PSQDeskriptiv}). Der Mittelwert $M$ der Skala $PSQ_{Sorgen}$ beträgt 24.28 ($SD$=17.69). Der Mittelwert $M$ der Skala $PSQ_{Anspannung}$ beträgt 42.14 ($SD$=21.96). Der Mittelwert $M$ der Skala $PSQ_{Freude}$ beträgt 65.26 ($SD$=19.08). Der Mittelwert $M$ der Skala $PSQ_{Anforderung}$ beträgt 46.97 ($SD$=19.54) und der Gesamtmittelwert $M$ der Skala $PSQ_{Gesamtscore}$ beträgt 37.03 ($SD$=17.11).
 
 %Table
 \begin{table}[ht]
@@ -147,7 +147,7 @@ Die Skalenauswertung des Perceived Stress Questionnaire (\acrshort{psq}) liefert
 
 
 \subsubsection{Wohlbefinden anhand SHS}
-Der Indexwert der Subjective Happiness Scale (\acrshort{shs}) $SHS~I$ beläuft sich in dieser Stichprobe auf $M$ 5.53 ($SD$=1.01) (siehe \textit{Tabelle \ref{table:SHSDeskriptiv}}).
+Der Indexwert der Subjective Happiness Scale (\acrshort{shs}) $SHS~I$ beläuft sich in dieser Stichprobe auf $M$ 5.53 ($SD$=1.01) (siehe Tabelle \ref{table:SHSDeskriptiv}).
 
 %Table
 \begin{table}[ht]
@@ -206,8 +206,9 @@ In den Hypothesen 1 bis 4 wurde jeweils die gesamte Mediennutzung verwendet. Die
 
 Wie bereits oben beschrieben, wurde die gesamte Mediennutzung in die Berechnung der Hypothesen einbezogen. Vollständigkeitshalber wurde die Berechnung von Hypothese 1 für alle einzelnen Medientätigkeiten wiederholt. Die einzelnen Medientätigkeiten waren: (1) Telefonieren,  (2) Textnachrichten lesen und schreiben (SMS, Whatsapp, etc.), (3) Emails lesen und bearbeiten, (4) Lesen / anschauen von Printmedien (Bilder-Bücher, Magazine, Zeitungen, Comics, etc.), (5) Internet nutzen (surfen, Informationen suchen, etc.), (6) Musik hören, (7) Fernsehen und Videos schauen (Sender, Netflix, DVD, etc.), (8) Radio hören, (9) Fotos oder Videos machen, (10) Video-Games spielen (Handy, Computer, Konsole, etc.) und (11) Hörspiele oder Hörbücher hören. Bei keinem der elf erfragten Tätigkeiten konnte ein signifikantes Resultat gefunden werden. Somit scheint die Mediennutzung (gemessen durch die Anzahl Minuten während der Betreuung) keinen statistisch signifikanten Unterschied ($p>.001$) hinsichtlich einer unsicheren oder sicheren Bindung zu ergeben (siehe einzelne Ergebnisse im Anhang \ref{app:ResultateMedientaetigkeiten}: \textit{\nameref{app:ResultateMedientaetigkeiten}}).
 
-Weitere Analysen wurden mittels den erfassten demografischen Daten durchgeführt. Diese Daten lassen sich in kategoriale Daten und intervall skalierte Daten unterteilen. Kategoriale Daten sind das Geschlecht, die Einkommensstufen, die Bildungsstufen, das Geschlecht des Kindes und die Lebensform der Eltern. Intervall skalierte Daten sind das Alter der Eltern, das Alter des Kindes in Monaten, die Anzahl Tage der Fremdbetreuung und die Anzahl Personen im Haushalt. Dabei wurden kategorial skalierte Variablen als Faktoren mittels ANOVA bezüglich der abhängigen Variablen Mediennutzung, der Bindung, des Stresses und dem subjektiven Wohlbefinden durchgeführt. Die Fragestellung lautete dabei, ob sich die Mittelwerte der abhängigen Variable (z.B.: Bindungsskala \textit{Angst}, Stressindex \textit{Anspannung}, SWB, etc.) bezüglich mehreren Gruppen der unabhängigen Variable statistisch signifikant unterscheiden  (z.B.: Bildung, Geschlecht, Einkommen, etc.). Für intervall skalierte Daten wurde die Berechnung mittels einfacher linearer Regression vorgenommen. Die Fragestellung lautete dabei, ob es einen Zusammenhang zwischen der unabhängigen (z.B.: Prädiktor lter der, Eltern, Alter des Kindes, Anzahl Tage der Fremdbetreuung, etc.) und der abhängigen Variable gibt (z.B.: Kriterium Mediennutzung bei schlafendem Kind, Bindungsskala \textit{Nähe}, etc.). Dabei wurde für keine der oben beschriebene Berechnung ein statistisch signifikantes Ergebnis gefunden. Für insgesamt zwei der insgesamt 99 Kombinationen konnte ein annähernd statistisch signifikantes Ergebnis gefunden werden. Dies war zwischen der Bildung und der Bindungsskala \textit{Vertrauen} mittels ANOVA ($F$(7,209) = 3.147, $p$=.003, partielles $\eta^2$=.095, $n$=217) und der Bildung und dem Stressindex \textit{Anpassung} mittels ANOVA ($F$(7,210) = 3.328, $p$=.002, partielles $\eta^2$=.100, $n$=218).
+Weitere Analysen wurden mittels den erfassten demografischen Daten durchgeführt. Diese wurden im Bezug zu den Erfassten Konstrukten Bindung, Mediennutzung, Stress und subjektives Wohlbefinden in Beziehung gesetzt. Dabei lassen sich die Daten in kategoriale Daten und intervall skalierte Daten unterteilen. Unter kategoriale Daten fallen das Geschlecht, die Einkommensstufen, die Bildungsstufen, das Geschlecht des Kindes und die Lebensform der Eltern. Unter intervall skalierte Daten fallen das Alter der Eltern, das Alter des Kindes in Monaten, die Anzahl Tage der Fremdbetreuung und die Anzahl Personen im Haushalt. Dabei wurden kategorial skalierte Variablen als Faktoren mittels ANOVA bezüglich der erfassten Konstrukte durchgeführt. Die Fragestellung lautete dabei, ob sich die Mittelwerte der abhängigen Variable (z.B.: Bindungsskala \textit{Angst}, Stressindex \textit{Anspannung}, SWB, etc.) bezüglich mehreren Gruppen der unabhängigen Variable statistisch signifikant unterscheiden  (z.B.: Bildung, Geschlecht, Einkommen, etc.). Für intervall skalierte Daten wurde die Berechnung mittels einfacher linearer Regression vorgenommen. Die Fragestellung lautete dabei, ob es einen Zusammenhang zwischen der unabhängigen (z.B.: Prädiktor Alter der Eltern, Alter des Kindes, Anzahl Tage der Fremdbetreuung, etc.) und der abhängigen Variable gibt (z.B.: Kriterium Mediennutzung bei schlafendem Kind, Bindungsskala \textit{Nähe}, etc.). Dabei wurde für keine der oben beschriebene Berechnung ein statistisch signifikantes Ergebnis gefunden. Für insgesamt zwei der insgesamt 99 Kombinationen konnte ein annähernd statistisch signifikantes Ergebnis gefunden werden. Dies war zwischen der Bildung und der Bindungsskala \textit{Vertrauen} mittels ANOVA ($F$(7,209) = 3.147, $p$=.003, partielles $\eta^2$=.095, $n$=217) und der Bildung und dem Stressindex \textit{Anpassung} mittels ANOVA ($F$(7,210) = 3.328, $p$=.002, partielles $\eta^2$=.100, $n$=218).
 
+In einem letzten Schritt wurden Korrelationen zwischen den erfassten Skalen (Bindung, Stresses und \acrshort{swb}) und den Medientätigkeiten gebildet. Dabei wurde neben der Unterscheidung der Medientätigkeit in das Kind war wach und das Kind hat geschlafen alle Medientätigkeiten einzeln miteinbezogen (z.B.: Textnachrichten schreiben, Fernseh schauen, etc.).  Bei der Berechnung der Korrelationen wurde von einem ungerichteten Zusammenhang ausgegangen, somit erfolgte die Testung auf Signifikanz zweiseitig \cite{UniversitatZurich2018}. Da mehrere Korrelationen gleichzeitig berechnet wurden, kam der paarweise Fallausschluss zum tragen. Das heisst, dass für jede Korrelation alle Fälle verwendet wurden, die für beide Variablen gültige Werte aufwiesen. Dabei konnte zwischen allen Skalen und der Medientätigkeit \textit{Textnachrichten schreiben} signifikante korrelationen mit einem nach \citeA{Cohen1988a} schwachen Effekt festgestellt werden. Zum Beispiel korreliert die Bindungsskala \textit{Vertrauen} signifikant mit dem Schreiben von Textnachrichten, währendem das Kind wach war ($r$=-.241, $p$=.000, $n$=217). Diese Skala korreliert zudem signifikant mit dem Schreiben von Textnachrichten, währendem das Kind geschlafen hat ($r$=-.177, $p$=.009, $n$=217) und dem Fernseh- oder Videos schauen, währendem das Kind wach war ($r$=-.186, $p$=.006, $n$=216). Die Stressskala \textit{Sorgen} korreliert signifikant mit dem Schreiben von Textnachrichten, währendem das Kind wach war ($r$=.191, $p$=.005, $n$=218). Die Stressskala \textit{Freude} korreliert signifikant mit dem Schreiben von Textnachrichten, währendem das Kind wach war ($r$=-.197, $p$=.004, $n$=218). Das subjektive Wohlbefinden korreliert signifikant mittels Skala SHS mit dem Schreiben von Textnachrichten, währendem das Kind wach war ($r$=-.179, $p$=.008, $n$=218). Für eine Übersicht der Resultate siehe Anhang \ref{app:Korrelationen}.
 
 
 
