--- a/content/Anhang/ResultateMedientaetigkeiten.tex
+++ b/content/Anhang/ResultateMedientaetigkeiten.tex
@@ -31,6 +31,6 @@
   
   &&\\
 \end{tabular}
-\caption{Resultate Bindung vs. Medientätigkeiten}
+\caption{Ergebnisse Bindung vs. Medientätigkeiten}
 \label{table:AppResultateMedientaetigkeiten}
 \end{table}
