--- a/content/Anhang/ZusammenzugResultate.tex
+++ b/content/Anhang/ZusammenzugResultate.tex
@@ -30,6 +30,6 @@
   & \textit{Medien Kind schlafend} & ($F$(2,202) = .146, $p$=.864, partielles $\eta^2$=.001, $n$=205)\\
   &&\\
 \end{tabular}
-\caption{Zusammenzug der Hypothesen-Resultate (Aufteilung wach / schlafend)}
+\caption{Zusammenzug der Hypothesen-Ergebnissen (Aufteilung wach / schlafend)}
 \label{table:AppZusammenzugResultate}
 \end{table}
