--- a/header.tex
+++ b/header.tex
@@ -29,6 +29,7 @@
 \usepackage{nicefrac} % Darstellung von Brüchen im Text e.g. 1/2
 \usepackage{listings} % Darstellung von SW-Code
 \usepackage{tabu}
+\usepackage{adjustbox}
 
 
 % Für Verweise innerhalb Doc (siehe https://strobelstefan.org/?p=145) -> funktioniert nicht mich package hyperref!
