--- a/main.tex
+++ b/main.tex
@@ -164,16 +164,24 @@ Bindungsstil, Stress und Wohlbefinden - Faktoren des Medienverhaltens von Eltern
 \newpage
 
 % Zusammengezogenen Resultate
-\section{Zusammenzug der Hypothesen-Resultate}\label{app:ZusammenzugResultate}
+\section{Zusammenzug der erweiterten Hypothesen-Ergebnissen}\label{app:ZusammenzugResultate}
 \input{content/Anhang/ZusammenzugResultate.tex}
 \newpage
 
 % Resultate Medientätigkeiten
-\section{Resultat einzelner Medientätigkeiten}\label{app:ResultateMedientaetigkeiten}
+\section{Ergebnisse einzelner Medientätigkeiten}\label{app:ResultateMedientaetigkeiten}
 \input{content/Anhang/ResultateMedientaetigkeiten.tex}
 \newpage
 
+% Resultate Korrelationen
+\section{Korrelationen zwischen den Haupt-Skalen und einzelner Medientätigkeiten}\label{app:Korrelationen}
+\input{content/Anhang/Korrelationen.tex}
+\newpage
 
+% Medien Fragebogen
+\section{Medien und Mediennutzungs Fragebogen}\label{app:MedienFragebogen}
+\input{content/Anhang/MedienFragebogen.tex}
+\newpage
 
 % AAS Fragebogen
 \section{Die Adult Attachment Scale (AAS)}\label{app:AAS}
@@ -196,23 +204,13 @@ Bindungsstil, Stress und Wohlbefinden - Faktoren des Medienverhaltens von Eltern
 \newpage
 
 % Mailing
-\section{Mailing}\label{app:Mailing}
+\section{Mailing, Flyer und Wettbewerb}\label{app:Mailing}
 \input{content/Anhang/Mailing.tex}
-\newpage
-
-% Flyer für die Rekrutierung
-\section{Flyer}\label{app:Flyer}
-\input{content/Anhang/Flyer.tex}
 \newpage
 
 % Rekrutierung
 \section{Rekrutierung}\label{app:Rekrutierung}
 \input{content/Anhang/Rekrutierung.tex}
-\newpage
-
-% Wettbewerb
-\section{Wettbewerb}\label{app:Wettbewerb}
-\input{content/Anhang/Wettbewerb.tex}
 \newpage
 
 % Ehrenwörtliche Erklärung
