--- a/content/2_methode.tex
+++ b/content/2_methode.tex
@@ -1,6 +1,6 @@
 % ---------------------------------------
 \subsection{Versuchssituation}\label{sec:Versuchssituation}
-Die Erstellung dieser Arbeit erfolgte im Frühlingssemester 2018 im Rahmen einer Masterarbeit an der Zürcher Hochschule für Angewandte Wissenschaften (ZHAW) im Studiengang Angewandte Psychologie in der Vertiefungsrichtung klinische Psychologie. Die Wahl des Themas und die Erstellung der Disposition erfolgte im Herbstsemester 2017. In dieser wurde anhand aktueller theoretischer Ansätze und der bisherigen Forschung (siehe auch Kap. \titleref{sec:Hintergrund}) das Vorgehen und das Design vordefiniert und zusammen mit dem betreuenden Dozenten abgesprochen. 
+Die Erstellung dieser Arbeit erfolgte im Frühlingssemester 2018 im Rahmen dieser Masterarbeit an der Zürcher Hochschule für Angewandte Wissenschaften (ZHAW) im Studiengang Angewandte Psychologie in der Vertiefungsrichtung klinische Psychologie. Die Wahl des Themas und die Erstellung der Disposition erfolgte im Herbstsemester 2017. In dieser wurde anhand aktueller theoretischer Ansätze und der bisherigen Forschung, das Vorgehen und das Design vordefiniert und zusammen mit dem betreuenden Dozenten abgesprochen (siehe auch Kapitel \textit{\nameref{sec:Hintergrund}}). 
 
 In einem ersten Schritt erfolgte die Erstellung eines standardisierter Fragebogens. Dieser basierte auf der theoretischen Vorarbeit und beinhaltete die für die Beantwortung der Fragestellung notwendigen Konstrukte \textit{Bindung}, \textit{Stress}, \textit{Medienverhalten}, \textit{subjektives Wohlbefinden} sowie der Erfassung soziodemografischer Daten. Für die Erstellung des Fragebogens wurden soweit als möglich bereits normierte und validierte Instrumente oder Teile aus bereits existierender Umfragen verwendet. Die Umfrage erfolgte elektronisch über das Internet und setzte sich aus einer kurzen Erläuterung der Studie, sowie entsprechende Anweisungen zur Beantwortung der Fragen zusammen. 
 
@@ -8,9 +8,9 @@ Der Fragebogen wurde mittels der von der ZHAW zur Verfügung gestellten Umfrages
 
 Die Testung des Fragebogens erfolgte mittels Pretest bezüglich seiner Funktionalität. Die Software erlaubte eine erste elektronische Testung auf Korrektheit. Dabei wurde geprüft, ob bei der Beantwortung alle Fragen durchlaufen wurden. In einem weiteren Test wurden fünf willkürlich ausgewählte Testpersonen aus dem Bekanntenkreis des Autoren als Testpersonen rekrutiert, welche den Fragebogen durchspielten. Diese wurden angehalten, die Fragen und deren Anweisungen auf Verständlichkeit zu überprüfen. Zudem sollten sie prüfen, ob die Beantwortung sinnvoll möglich war. Eine weitere detaillierte Prüfung wurde durch den betreuenden Dozenten vorgenommen. 
 
-Nach dem Abschluss der Testphase wurden alle bis dahin erfassten Daten der Tester gelöscht und die gesamte Umfrage frisch initialisiert. Die Umfrage wurde aktiviert und für die Teilnehmer verfügbar gemacht. In diesem Zeitraum erfolgte die Rekrutierung der Stichprobe (siehe dazu \titleref{sec:Datenerhebung} auf Seite \pageref{sec:Datenerhebung}) und die Vorbereitung für die Auswertung der Daten. 
+Nach dem Abschluss der Testphase wurden alle bis dahin erfassten Daten der Tester gelöscht und die gesamte Umfrage frisch initialisiert. Die Umfrage wurde aktiviert und für die Teilnehmer verfügbar gemacht. In diesem Zeitraum erfolgte die Rekrutierung der Stichprobe (siehe dazu \textit{\nameref{sec:Datenerhebung}} auf Seite \pageref{sec:Datenerhebung}) und die Vorbereitung für die Auswertung der Daten. 
 
-Am Ende der Rekrutierungsphase wurde eine Mail an alle involvierten Personen und Institutionen gesandt, um auf das Ende der Umfrage hinzuweisen. Anschliessend wurden die Daten bereinigt und in einem Brutto- und Nettodatensatz abgelegt. Es wurden die zum Bezug von Versuchpersonenstunden berechtigte Personen ermittelt und der ZHAW gemeldet. Zudem wurden die Gewinner des Wettberwerbs mittels randomisierter Ziehung ausgewählt und über ihren Gewinn informiert. Es erfolgte die Aufarbeitung der Daten und die Prüfung der empirischen Hypothesen (siehe Kap. \titleref{sec:EmpirischeHypothesen}). Mittels Dikussion erfolgte eine kritische Auseinandersetzung mit den Befunden und dem Abschluss dieser Arbeit.
+Am Ende der Rekrutierungsphase wurde eine Mail an alle involvierten Personen und Institutionen gesandt, um auf das Ende der Umfrage hinzuweisen. Anschliessend wurden die Daten bereinigt und in einem Brutto- und Nettodatensatz abgelegt. Es wurden die zum Bezug von Versuchpersonenstunden berechtigte Personen ermittelt und der ZHAW gemeldet. Zudem wurden die Gewinner des Wettberwerbs mittels randomisierter Ziehung ausgewählt und über ihren Gewinn informiert. Es erfolgte die Aufarbeitung der Daten und die Prüfung der empirischen Hypothesen (siehe Kapitel \textit{\nameref{sec:EmpirischeHypothesen}} auf Seite \pageref{sec:EmpirischeHypothesen}). Mittels Dikussion erfolgte eine kritische Auseinandersetzung mit den Befunden und dem Abschluss dieser Arbeit.
 
 Die gesamte Masterarbeit dauerte von der Erstellung der Disposition im Herbstsemester 2017 bis zur Fertigstellung der Masterarbeit Ende Frühlingssemster 2018 zwei Semester und wurde Ende Juli 2018 zur Bewertung eingereicht.
 
@@ -38,7 +38,7 @@ Bei den soziodemografischen Daten wurden folgende Parameter erfasst: Geschlecht,
 \paragraph{Medien und Mediennutzung}\label{sec:MedienMediennutzung}
 Die Fragebogenitems für die Erfassung der Medien und der Mediennutzung wurden basierend auf den Vorlagen der Studien von \citeA{Feierabend2017, Blikk2017, Waller2016, Suter2015, Feierabend2015, Kabali2015} neu zusammengestellt. Dabei stand die Mediennutzung während der Betreuung der Kinder in Minuten und das dazu verwendeten Medium im Fokus. Zudem erfolgte ein Spezifizierung der Einschätzung der Mediennutzung hinsichtlich des betreuten Kindes, ob dieses während der Betreuung wach war oder geschlafen hat. Des Weiteren wurde erfragt, ob das Medium für die Nutzung privat oder geschäftlich genutzt wurde. 
 
-Die Einschätzung der absoluten Mediennutzung der Eltern erfolgte anhand der letzten Betreuung ihrer Kinder. Es wurde davon ausgegangen, dass die Nutzung für die Probanden am einfachsten aus der Erinnerung abrufbar sei. Eine Unterteilung der Nutzung nach Wochentag oder Wochenende wurde als wenig zielführend erachtet. Für die Beantwortung der Fragestellung hätte bereits die reine Mediennutzung gereicht. Es wurde jedoch als hilfreich erachtet, zusätzliche Parameter zur reinen Nutzung zu erheben, um gegebenenfalls die Fragestellung detaillierter beantworten zu können. Erfasst wurden neben der Mediennutzung und der aufgewendeten Zeit, die dazu benutzten Medien, die im Haushalt vorhanden Geräte und auf welches der benutzen Geräte die Eltern während der Betreuung am wenigsten verzichten konnten. Zu den erfassten Medien gehörten: (1) Smartphone, (2) TV, (3) Desktop / Laptop Computer, (4) Tablet, (5) Radio / Stereoanlage / CD-Player, (6) Printmedien (Buch, Zeitung, Heft, Comic), (7) Foto- und / oder Videokamera, (8) Spielekonsole und (9) MP3 Player.
+Die Einschätzung der absoluten Mediennutzung der Eltern erfolgte anhand der letzten Betreuung ihrer Kinder. Es wurde davon ausgegangen, dass die Nutzung für die Probanden am einfachsten aus der Erinnerung abrufbar sei. Eine Unterteilung der Nutzung nach Wochentag oder Wochenende wurde als wenig zielführend erachtet. Für die Beantwortung der Fragestellung hätte bereits die reine Mediennutzung gereicht. Es wurde jedoch als hilfreich erachtet, zusätzliche Parameter zur reinen Nutzung zu erheben, um gegebenenfalls die Fragestellung detaillierter beantworten zu können. Erfasst wurden neben der Mediennutzung und der aufgewendeten Zeit, die dazu benutzten Medien, die im Haushalt vorhanden Geräte und auf welches der benutzen Geräte die Eltern während der Betreuung am wenigsten verzichten konnten. Zu den erfassten Medien gehörten: (1) Smartphone, (2) TV, (3) Desktop / Laptop Computer, (4) Tablet, (5) Radio / Stereoanlage / CD-Player, (6) Printmedien (Buch, Zeitung, Heft, Comic), (7) Foto- und / oder Videokamera, (8) Spielekonsole und (9) MP3 Player. Für eine Zusammenstellung der Fragebogenitems siehe Anhang \ref{app:MedienFragebogen}.
 
 Die Operationalisiserung erfolgte anhand der Summenbildung der Mediennutzung in Minuten, während denen das Kind betreut wurde. Es wurden insgesamt 11 Tätigkeiten abgefragt: (1) Telefonieren, (2) Textnachrichten lesen und schreiben (SMS, Whatsapp, etc.), (3) Emails lesen und bearbeiten, (4) Lesen / anschauen von Printmedien (Bilder-Bücher), (5) Internet nutzen (surfen, Informationen suchen, etc.), (6) Musik hören, (7) Fernsehen und Videos schauen (Sender, Netflix, DVD, etc.), (8) Radio hören, (9) Fotos oder Videos machen, (10) Video-Games spielen (Handy, Computer, Konsole, etc.) und (11) Hörspiele oder Hörbücher hören. 
 
@@ -159,7 +159,7 @@ Die Skala enthält insgesamt vier Items. Zwei davon erfassen das eigene Selbstbi
 \citeA{Lyubomirsky1999} weisen darauf hin, dass sich der \acrshort{shs} für die Erfassung des subjektiven Wohlbefindens besser eignet als andere vergleichbare Instrumente (z.B.: \textit{Affect Balance Scale} oder \textit{the Satisfaction With Life Scale}), da der Fragebogen eine globale subjektive Einschätzung bezügliche Wohlbefinden vornimmt, im Gegensatz zur Erfassung von eigentlichen Glückszuständen, die einer bestimmte Zeitspanne zuzuordnen sind (z.B.: affektive und kognitive Zustände). Der Fragebogen wurde in 14 Studien mit einem Total von 2,732 Teilnehmern validiert. Die Daten wurden innerhalb der vereinigten Staaten anhand von Studenten zweier Universitäten und einer Mittelschule von Erwachsenen innerhalb zweier Städten in Kalifornien erhoben. Zudem wurden Teilnehmer aus Moswkau, Russland beigezogen. Demzufolge soll der \acrshort{shs} eine hohe interne Konsistenz aufweisen, welche über alle Stichproben stabil blieb. Die Test-Retest-Korrelation und die Korrelation zwischen Eigen- und Fremdeinschätzung deuten auf eine gute bis sehr gute Realiabilität hin.  
 Zudem deute die Konstruktvalidität darauf hin, dass der Fragebogen auch wirklich das Konstrukt subjektives Wohlbefinden misst (vgl. ebd.). \citeA{Swami2009} konnten in ihrer Studie nachweisen, dass es sich bei der deutschen Übersetzung um eine unidimensionale Struktur, mit einer hohen internen Konsistenz handelt. Das Cronbach $\alpha$ für die deutsche Version belief sich auf .82. Diese Übersetzung korrelierte hoch mit anderen Messinstrumenten, welche das subjektive Wohlbefinden erfassen. Demzufolge habe der neue Fragebogen eine gute Konvergenzvalidität. Hingegen konnten die Forscher keine Aussage über die Test-Retest-Reliabilität machen, noch nahmen sie eine Validierungsprüfung vor, da dies nicht zum Gegenstand ihrer Überprüfung zählte (vgl. ebd.).
 
-Die Operationalisierung erfolgt anhand der Mittelwertsbildung der vier Items \cite{Lyubomirsky1999} und ergibt einen \acrshort{shs}-Index (siehe \titleref{eq:SHS}). Die mögliche Ausprägung dieses Index reicht von 1.0 bis 7.0. Eine hohe Ausprägung steht für ein hohe subjektive Zufriedenheit.
+Die Operationalisierung erfolgt anhand der Mittelwertsbildung der vier Items \cite{Lyubomirsky1999} und ergibt einen \acrshort{shs}-Index. Die mögliche Ausprägung dieses Index reicht von 1.0 bis 7.0. Eine hohe Ausprägung steht für ein hohe subjektive Zufriedenheit.
 
 %Formel
 \begin{equation}\label{eq:SHS}
@@ -169,20 +169,20 @@ Die Operationalisierung erfolgt anhand der Mittelwertsbildung der vier Items \ci
 \subsection{Datenerhebung \& Rekrutierung}\label{sec:Datenerhebung}
 Zur Datengewinnung wurde die von der ZHAW zur Verfügung gestellten Umfragesoftware Enterprise Feedback Suite in der Version 10.9 der Firma \citeA{Questback2018} verwendet. Der Fragebogen wurde mit Hilfe der zur Verfügung gestellten Dokumentation kreiert \cite{EFS2016} und wurde Mitte Januar bis Ende Mai 2018 aktiv geschaltet.  Der Zugang zur Befragung erfolgte über die von der Firma \citeA{Questback2018} zur Verfügung gestellten öffentlichen Internetadresse, welche zum Zeitpunkt der Befragung wie folgt lautete: https://ww2.unipark.de/uc/elternfragebogen/.
 
-Die Rekrutierung erfolgte im Sinne einer Gelegenheitsstichprobe, da das Ziel dieser Untersuchungen in der Erfassung der Veränderung der abhängigen Variable Mediennutzung anhand der unabhängigen Variablen Bindung und Stress war und sich dieses Vorgehen als ökonomisch und praktikabel im Hinblick auf die Forschungsfrage herausstellte \cite{TUDresden2015}. Für den Versand der Umfrage wurde ein Infomail und ein Infozettel (Flyer) in elektronischer Form mit den wichtigsten Angabe zur Studie und dem Link zur Umfrage erstellt (siehe dazu Anhang \ref{app:Mailing} und \ref{app:Flyer}). Der Flyer wurde zusätzlich in Papierform für den Versand per Post und die Auslage ausgedruckt. 
+Die Rekrutierung erfolgte im Sinne einer Gelegenheitsstichprobe, da das Ziel dieser Untersuchungen in der Erfassung der Veränderung der abhängigen Variable Mediennutzung anhand der unabhängigen Variablen Bindung und Stress war und sich dieses Vorgehen als ökonomisch und praktikabel im Hinblick auf die Forschungsfrage herausstellte \cite{TUDresden2015}. Für den Versand der Umfrage wurde ein Infomail und ein Infozettel (Flyer) in elektronischer Form mit den wichtigsten Angabe zur Studie und dem Link zur Umfrage erstellt (siehe dazu Anhang \ref{app:Mailing}). Der Flyer wurde zusätzlich in Papierform für den Versand per Post und die Auslage ausgedruckt. 
 
 Für den Versand des Infomailings und des Flyers wurden unterschiedliche Kanäle verwendet: Einerseits wurden diese per Post für die jeweilige Auslage und den Aushang versendet, andererseits erfolgte der Versand elektronisch über Mail, Facebook-Posting und Text-Nachrichten. Zudem wurde der Flyer auf unterschiedlichen einschlägigen Webseiten publiziert. Um den Medienbruch möglichst gering zu halten, wurde wann immer möglich versucht, den Link für die Umfrage elektronisch zugänglich zu machen. 
 
 Die Rekrutierung fand an folgenden Orten und Institutionen statt (für eine detaillierte Übersicht, siehe Auflistung in Anhang \ref{app:Rekrutierung}): Direkt an der ZHAW, über die Elternberatungsstellen der deutschsprachigen Schweiz \cite{Sfmvb2018}, über Spitäler mit Wochenbett und Kinderärzte, über die deutschsprachigen Familienzentren \cite{NetzwerkBildung2018}, über die Anschrift aller deutschsprachiger Niederlassungen der \citeA{Elternbildung2018} und über das private Umfeld des Autors, mit der Bitte, die Umfrage im eigenen Umkreis weiter zu verteilen. Zudem wurde die Umfrage auf der Internetplattform der Elternzeitschrift \enquote{Fritz \&  Fränzi}, dem Marktplatz des Elternmagazins \enquote{Wir Eltern} und dem Forum der Internetplattform \enquote{Swissmom} publiziert.
 
-Um für die Teilnahme an der Umfrage möglichst viele Eltern zu gewinnen, wurde mittels Wettbewerb und Versuchspersonenstunden Anreize geschaffen. Beim Wettbewerb handelte es sich um Warengutscheine bei einem renomierten Onlineshop für Babybedarf von 10 x CHF 50.- (www.baby-rose.ch). Dabei wurde am Ende des Fragebogens die Möglichkeit geboten, am Wettbewerb teilzunehmen und die eigene Emailadresse für die Benachrichtigung im Fall eines Gewinns zu hinterlegen. Am Schluss der Rekrutierungsphase wurden die Gewinner per Zufall gezogen. Dazu wurden alle Wettberwerbsteilnehmen in eine separate Liste kopiert und nummeriert. Anschlissend wurde mittels minimalem Swift-Skript \cite{Swift2017} zehn Teilnehmer randomiesiert ausgewählt (Code siehe Anhang \ref{app:Wettbewerb}). Diese wurden mittels Mail über ihren Gewinn informiert. Neben dem Wettbewerb konnten sich Studierende der ZHAW in Angewandter Psychologie 0.5 Versuchspersonenstunden anrechenen lassen, wenn sie die Umfrage durchführten. Die Validierung über die Berechtigung der Versuchspersonenstunden erfolgte innerhalb der ZHAW im Departement Psychologie (mail: diana.graf@zhaw.ch). 
+Um für die Teilnahme an der Umfrage möglichst viele Eltern zu gewinnen, wurde mittels Wettbewerb und Versuchspersonenstunden Anreize geschaffen. Beim Wettbewerb handelte es sich um Warengutscheine bei einem renomierten Onlineshop für Babybedarf von 10 x CHF 50.- (www.baby-rose.ch). Dabei wurde am Ende des Fragebogens die Möglichkeit geboten, am Wettbewerb teilzunehmen und die eigene Emailadresse für die Benachrichtigung im Fall eines Gewinns zu hinterlegen. Am Schluss der Rekrutierungsphase wurden die Gewinner per Zufall gezogen. Dazu wurden alle Wettberwerbsteilnehmen in eine separate Liste kopiert und nummeriert. Anschlissend wurde mittels minimalem Swift-Skript \cite{Swift2017} zehn Teilnehmer randomiesiert ausgewählt (Code siehe Anhang \ref{app:Mailing}). Diese wurden mittels Mail über ihren Gewinn informiert. Neben dem Wettbewerb konnten sich Studierende der ZHAW in Angewandter Psychologie 0.5 Versuchspersonenstunden anrechenen lassen, wenn sie die Umfrage durchführten. Die Validierung über die Berechtigung der Versuchspersonenstunden erfolgte innerhalb der ZHAW im Departement Psychologie (mail: diana.graf@zhaw.ch). 
 
 \subsection{Beschreibung der Stichprobe}
 Insgesamt schlossen brutto 248 Personen die Umfrage ab. 1454 Personen sind zumindest auf die erste Seite gelangt und haben anschliessend abgebrochen. Dies entspricht einer Beendingungsquote von 17.06\%. Die meisten Abbrüche sind auf der Startseite mit 1045 zu verzeichnen (71.87\%), gefolgt von den demografischen Daten mit 100 (6.88\%) und Medien und Mediennutzung mit 44 (3\%). Die mittlere Bearbeitungszeit des Fragebogens dauerte 27 Minuten. 
 
 Nach der Datenbereinigung blieben netto 218 Personen übrig (87.9\%). Eine Personen wurde ausgemustert, da sie beim Jahrgang einen fehlerhaften Wert angegeben hatte (Jg 2017). Zwei weitere Person gaben an, die Umfrage nicht seriös ausgefüllt zu haben. Zwei Personen mussten entfernt werden, da die Personen bei der Angabe der Mediennutzungszeit in Minuten mit Ja und Nein geantwortet haben. 25 Personen wurden entfernt, da das Alter ihrer Kinder 13 Monate überstieg. 
 
-Die Merkmale Geschlecht, Alter in Jahren, Geschlecht Kind und Alter Kind in Jahren sind in Tabelle \ref{table:Stichprobe} \textit{\titleref{table:Stichprobe}} dargestellt (eine um die Merkmale Familieneinkommen, Bidlungsabschluss, Anzahl Personen im Haushalt, Lebensfrom und Fremdbetreuung in Tagen ist in Tabelle \textit{\ref{table:Gesamtstichprobe}} im Anhang zu finden).
+Die Merkmale Geschlecht, Alter in Jahren, Geschlecht Kind und Alter Kind in Jahren sind in Tabelle \ref{table:Stichprobe} dargestellt (eine um die Merkmale Familieneinkommen, Bidlungsabschluss, Anzahl Personen im Haushalt, Lebensform und Fremdbetreuung in Tagen ist in Tabelle \ref{table:Gesamtstichprobe} im Anhang zu finden).
 
 \begin{table}[htbp]
 \begin{tabular}{m{0.5em}  m{10em}  m{5em}} 
@@ -215,7 +215,7 @@ Die Merkmale Geschlecht, Alter in Jahren, Geschlecht Kind und Alter Kind in Jahr
 
 Das Alter der Befragten liegt zwischen 20 und 48 Jahren mit einem Durchschnittsalter von 33.9 Jahren ($SD$ = 4.5). Weibliche Probanden sind mit 90.8 \% ($n$ = 198) in der Stichprobe vertreten. Das Geschlecht der Kinder ist mit 44.5\% weiblichen ($n$ = 97) und 54.6\% männlichen ($n$ = 119) Kindern vertreten. Das Alter der Kinder liegt zwischen 0 und 12 Monaten mit einem Durchschnitt von 6.6 Monaten ($SD$ = 3.4).
 
-Bei der Angabe zum Familieneinkommen (siehe Tabelle \textit{\ref{table:Gesamtstichprobe}} im Anhang) zeigt sich die stärkste Ausprägung bei Personen, die über ein Familieneinkommen von über CHF 104'001 und mehr verfügen mit 34.3\% ($n$ = 75), gefolgt von Familien mit einem Einkommen zwischen CHF 78'001 und CHF 104'000 mit 30.3\% ($n$ = 66) und Familien mit einem Einkommen zwischen CHF 52'000 und CHF 78'000 mit 23.9\% ($n$ = 52). 
+Bei der Angabe zum Familieneinkommen (siehe Tabelle \ref{table:Gesamtstichprobe} im Anhang) zeigt sich die stärkste Ausprägung bei Personen, die über ein Familieneinkommen von über CHF 104'001 und mehr verfügen mit 34.3\% ($n$ = 75), gefolgt von Familien mit einem Einkommen zwischen CHF 78'001 und CHF 104'000 mit 30.3\% ($n$ = 66) und Familien mit einem Einkommen zwischen CHF 52'000 und CHF 78'000 mit 23.9\% ($n$ = 52). 
 
 73 Personen gaben an über ein Uni oder Fachhochschultitel zu verfügen, was mit 33.5\% die höchste Ausprägung darstellt, dicht gefolgt von einem Lehrabschluss mit 23.9\% ($n$ = 52) und einem Abschluss an einer höheren Fachschule mit 22.9\% ($n$ = 50). Zusammenfassend ergibt das einen Abschluss im tertiären Bereich von 60.6\% ($n$ = 132), im Sekundar II Bereich von 36.6\% ($n$ = 79) und im Bereich der Grundschule 2.8\% ($n$ = 6).
 
@@ -226,7 +226,7 @@ Insgesamt haben 158 Personen am Wettbewerb teilgenommen, was 72.5\% der Stichpro
 
 
 \subsection{Empirische Hypothesen}\label{sec:EmpirischeHypothesen}
-Im Folgenden werden die konzeptionellen Hypothesen aus Kapitel \titleref{sec:Fragestellung} in empirische Hypothesen überführt:
+Im Folgenden werden die konzeptionellen Hypothesen aus Kapitel \textit{\nameref{sec:Fragestellung}} in empirische Hypothesen überführt:
 
 (1) Die Mediennutzung von sicher gebundenen Eltern ist im Durchschnitt signifikant tiefer als diejenige der unsicher gebundenen Eltern.
 
@@ -235,6 +235,8 @@ Im Folgenden werden die konzeptionellen Hypothesen aus Kapitel \titleref{sec:Fra
 (3) Eltern, die eine tiefe Mediennutzung vorweisen, haben im Durchschnitt ein signifikant höheres subjektives Wohlbefinden.
 
 (4) Das Stressempfinden und die Mediennutzung von sicher gebundenen Eltern ist im Durchschnitt signifikant tiefer als dasjenige der unsicher gebundenen Eltern.
+
+Daraus ergibt sich die empirische Grundhypothese: Die Mediennutzung und das Stressempfinden sicher gebundener Eltern ist im Durchschnitt signifikant tiefer, das subjektive Wohlbefinden signifikant höher als bei unsicher gebundenen Eltern.
 
 
 \subsection{Statistische Analyseverfahren}
