--- a/content/Anhang/Inhaltsverzeichnis.tex
+++ b/content/Anhang/Inhaltsverzeichnis.tex
@@ -2,8 +2,10 @@
 \begin{table}[ht]
 \begin{tabular}{l m{27em}  r}
   \hline
-  Anhang & Titel & Seite \\
+  \textbf{Anhang} & \textbf{Titel} & \textbf{Seite} \\
   \hline
+  \rowcolor{lightgray}
+  \multicolumn{3}{l}{Stichprobe und Ergebnisse}\\
   \ref{app:Gesamtstichprobe} & \nameref{app:Gesamtstichprobe} &   \pageref{app:Gesamtstichprobe}\\
   \ref{app:Mediennutzung} & \nameref{app:Mediennutzung} & \pageref{app:Mediennutzung}\\
   \ref{app:Medientätigkeit} & \nameref{app:Medientätigkeit} & \pageref{app:Medientätigkeit}\\
@@ -11,6 +13,9 @@
   \ref{app:Medienverzicht} & \nameref{app:Medienverzicht} & \pageref{app:Medienverzicht}\\
   \ref{app:TablesAas} & \nameref{app:TablesAas} & \pageref{app:TablesAas}\\
   \ref{app:TablesPsq} & \nameref{app:TablesPsq} & \pageref{app:TablesPsq}\\
+  
+  \rowcolor{lightgray}
+  \multicolumn{3}{l}{Überprüfung der Hypothesen}\\
   \ref{app:Hypo1_Histogramme} & \nameref{app:Hypo1_Histogramme} & \pageref{app:Hypo1_Histogramme}\\
   \ref{app:Hypo1_QQDiagramme} & \nameref{app:Hypo1_QQDiagramme} & \pageref{app:Hypo1_QQDiagramme}\\
   \ref{app:Hypo1_Boxplot} & \nameref{app:Hypo1_Boxplot} & \pageref{app:Hypo1_Boxplot}\\
@@ -19,15 +24,26 @@
   \ref{app:Hypo2_Kurvenanpassung} & \nameref{app:Hypo2_Kurvenanpassung} & \pageref{app:Hypo2_Kurvenanpassung}\\
   \ref{app:Hypo3_Streudiagramm} & \nameref{app:Hypo3_Streudiagramm} & \pageref{app:Hypo3_Streudiagramm}\\
   \ref{app:Hypo3_Histogramm} & \nameref{app:Hypo3_Histogramm} & \pageref{app:Hypo3_Histogramm}\\
+  
+  \rowcolor{lightgray}
+  \multicolumn{3}{l}{Weitere Ergebnisse}\\
   \ref{app:ZusammenzugResultate} & \nameref{app:ZusammenzugResultate} & \pageref{app:ZusammenzugResultate}\\
+  \ref{app:ResultateMedientaetigkeiten} &
+  \nameref{app:ResultateMedientaetigkeiten} & \pageref{app:ResultateMedientaetigkeiten}\\
+  \ref{app:Korrelationen} & \nameref{app:Korrelationen} & \pageref{app:Korrelationen}\\
+  
+  \rowcolor{lightgray}
+  \multicolumn{3}{l}{Verwendete Fragebögen}\\
+  \ref{app:MedienFragebogen} & \nameref{app:MedienFragebogen} & \pageref{app:MedienFragebogen}\\
   \ref{app:AAS} & \nameref{app:AAS} & \pageref{app:AAS}\\
   \ref{app:PSQ} & \nameref{app:PSQ} & \pageref{app:PSQ}\\
   \ref{app:SHS} & \nameref{app:SHS} & \pageref{app:SHS}\\
+  
+  \rowcolor{lightgray}
+  \multicolumn{3}{l}{Onlineumfrage und Diverses}\\
   \ref{app:Fragebogen} & \nameref{app:Fragebogen} & \pageref{app:Fragebogen}\\
   \ref{app:Mailing} & \nameref{app:Mailing} & \pageref{app:Mailing}\\
-  \ref{app:Flyer} & \nameref{app:Flyer} & \pageref{app:Flyer}\\
   \ref{app:Rekrutierung} & \nameref{app:Rekrutierung} & \pageref{app:Rekrutierung}\\
-  \ref{app:Wettbewerb} & \nameref{app:Wettbewerb} & \pageref{app:Wettbewerb}\\
   %\ref{} & \nameref{} & \pageref{}\\
   \hline
   &&\\
