--- a/content/glossar.tex
+++ b/content/glossar.tex
@@ -1,4 +1,5 @@
 \newacronym{aas}{AAS}{Adult Attachment Scale}
+\newacronym{efs}{EFS}{Enterprise Feedback Suite}
 \newacronym{psq}{PSQ}{Perseived Stress Questionnaire}
 \newacronym{shs}{SHS}{Subjective Happiness Scale}
 \newacronym{swb}{SWB}{Subjektives Wohlbefinden}
